Mon Jul 28 14:20:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp:
          Make sure tms_ and ws_ are initialised to 0

        * tao/Resume_Handle.h:
          Documentation changes

        * tao/Muxed_TMS.cpp:
          Const changes

        * tao/Connection_Handler.cpp:
          Layout changes

        * tao/GIOP_Message_Base.cpp (dump_msg):
          Return directly when we don't have orb debug level 10, increases
          performance when we run at level 5 until 9

Mon Jul 28 13:57:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/TAO_IDL/driver/drv_preproc.cpp:
          Change test for Vista specifically not just all win32.

Mon Jul 28 13:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO/TAO_IDL/driver/drv_preproc.cpp:
          Vista specifically has some OS file timing issues, TAO_IDL
          keeps failing to open temporary files. These mods should
          help identify where these are comming from. (I beleive it is
          a timing issue with file deletetion, then immediate recreation.)

Mon Jul 28 12:04:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/nslist/nslist.cpp:
          Fixed OpenVMS warning

        * tao/ZIOP/ZIOP.cpp:
          Fixed compile problem when messaging is disabled

Mon Jul 28 10:17:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * MPC/config/imr_client.mpb:
          Missing portableserver dependancy for the use of imr_client.

Mon Jul 28 09:15:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Connector.cpp:
          Only call remove_reference when we have a valid svc_handler
          pointer. Could be zero in the case we run out of TSS keys

        * tao/MCAST_Parser.cpp:
          Use ACE_MAX_DEFAULT_PORT

Sun Jul 27 06:18:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Security/SL2_SecurityManager.cpp: